Added stock search by warehouse

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,16 @@
 			<artifactId>java-jwt</artifactId>
 			<version>3.19.2</version>
 		</dependency>
+		<!-- Swagger dependency -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+
+
+
+
 
 	</dependencies>
 
