--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/stocktrackingdb
+spring.datasource.url= jdbc:mysql://stocktrackingdb.ckdsnsfalkfr.us-east-1.rds.amazonaws.com:3306/stocktrackingdb
 spring.datasource.username=root
 spring.datasource.password=root1234
 spring.jpa.hibernate.ddl-auto=update
@@ -10,4 +10,4 @@ logging.level.org.springframework.security=TRACE
 jwt-variables.KEY=jwtProject
 jwt-variables.EXPIRES_ACCESS_TOKEN_MINUTE=150
 jwt-variables.EXPIRES_REFRESH_TOKEN_MINUTE=150000
-server.port=9090
+server.port=5000
