Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,20 +1,27 @@
-stages:
-  - deploy
-Deploy:
-  stage: deploy
-  before_script:
-  - 'command -v ssh-agent >/dev/null || ( apk add --update openssh )'
-  - eval $(ssh-agent -s)
-  - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
-  - mkdir -p ~/.ssh
-  - chmod 700 ~/.ssh
-  - ssh-keyscan $EC2_IPADDRESS >> ~/.ssh/known_hosts
-  - chmod 644 ~/.ssh/known_hosts
-  script:
-    - mkdir .public
-    - cp -r * .public
-    - mv .public public
-    - zip -r public.zip public
-    - scp -o StrictHostKeyChecking=no public.zip ubuntu@3.93.9.46:/var/www/html
-    - ssh -o StrictHostKeyChecking=no ubuntu@3.93.9.46 "cd /var/www/html; touch foo.txt; unzip public.zip"
-    
+ 
+stages:                                                                                                                                         
+ - build                                                                                                                                        
+ - deploy                                                                                                                                       
+                                                                                                                                                
+maven-build:                                                                                                                                    
+  image: maven:3-jdk-11                                                                                                                         
+  stage: build                                                                                                                                  
+  script: "mvn package -B"                                                                                                                      
+  artifacts:                                                                                                                                    
+    paths:                                                                                                                                      
+      - target/gitlab-ci-demo.jar                                                                                                               
+                                                                                                                                                
+deploy-master:
+  rules:                                                                                                                                    
+    - if: '$CI_COMMIT_BRANCH =~ /^dev$/'
+
+                                                                                                                  
+  before_script:                                                                                                                                
+    - apt-get update -qq && apt-get install -y -qq sshpass                                                                                      
+  stage: deploy                                                                                                                                 
+  script:                                                                                                                                       
+    - sshpass -V                                                                                                                                
+    - export SSHPASS=$CI_USER_PASS                                                                                                              
+    - sshpass -e scp -o StrictHostKeyChecking=no target/gitlab-ci-demo.jar gitlab-ci@167.172.188.139:/home/gitlab-ci                            
+    - sshpass -e ssh -tt -o StrictHostKeyChecking=no gitlab-ci@167.172.188.139 sudo mv /home/gitlab-ci/gitlab-ci-demo.jar /opt/java/webapps     
+    - sshpass -e ssh -tt -o StrictHostKeyChecking=no gitlab-ci@167.172.188.139 sudo systemctl restart gitlab-ci-demo.service 
