--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ maven-build:
   script: "mvn package -B"                                                                                                                      
   artifacts:                                                                                                                                    
     paths:                                                                                                                                      
-      - target/gitlab-ci-demo.jar                                                                                                               
+      - target/stockbackend.jar                                                                                                               
                                                                                                                                                 
 deploy-master:
   rules:                                                                                                                                    
@@ -22,6 +22,6 @@ deploy-master:
   script:                                                                                                                                       
     - sshpass -V                                                                                                                                
     - export SSHPASS=$CI_USER_PASS                                                                                                              
-    - sshpass -e scp -o StrictHostKeyChecking=no target/gitlab-ci-demo.jar gitlab-ci@3.93.9.46:/home/gitlab-ci                            
-    - sshpass -e ssh -tt -o StrictHostKeyChecking=no gitlab-ci@3.93.9.46 sudo mv /home/gitlab-ci/gitlab-ci-demo.jar /opt/java/webapps     
+    - sshpass -e scp -o StrictHostKeyChecking=no target/stockbackend.jar gitlab-ci@3.93.9.46:/home/gitlab-ci                            
+    - sshpass -e ssh -tt -o StrictHostKeyChecking=no gitlab-ci@3.93.9.46 sudo mv /home/gitlab-ci/stockbackend.jar /opt/java/webapps     
     - sshpass -e ssh -tt -o StrictHostKeyChecking=no gitlab-ci@3.93.9.46 sudo systemctl restart gitlab-ci-demo.service 
