--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,23 +10,24 @@ maven-build:
   artifacts:                                                                                                                                    
     paths:                                                                                                                                      
       - target/stock-tracking-be-0.0.1-SNAPSHOT.jar
-
-deploy-master:
-  rules:                                                                                                                                    
-    - if: '$CI_COMMIT_BRANCH =~ /^dev$/'
-
-                                                                                                                  
-  before_script:                                          
-    - 'command -v ssh-agent >/dev/null || ( apk add --update openssh )' 
-    - eval $(ssh-agent -s)
-    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
-    - mkdir -p ~/.ssh
-    - chmod 700 ~/.ssh
-    - ssh-keyscan $EC2_IPADDRESS >> ~/.ssh/known_hosts
-    - chmod 644 ~/.ssh/known_hosts                                                                                      
-    - apt-get update -qq && apt-get install -y -qq sshpass                                                                                  
-  stage: deploy                                                                                                                                 
-  script:                                                                                                                                                                                                                                                   
-    - scp -o StrictHostKeyChecking=no target/stock-tracking-be-0.0.1-SNAPSHOT.jar gitlab-ci@3.93.9.46:/home/gitlab-ci
-    - ssh -tt -o StrictHostKeyChecking=no gitlab-ci@3.93.9.46 sudo mv /home/gitlab-ci/stock-tracking-be-0.0.1-SNAPSHOT.jar /opt/java/webapps     
-    - ssh -tt -o StrictHostKeyChecking=no gitlab-ci@3.93.9.46 sudo systemctl restart stock-tracking-be-0.0.1-SNAPSHOT.service 
+                                                                                                              
+deploy:
+    stage: deploy
+    image: alpine:3.11
+    before_script:
+        - apk update && apk add openssh-client bash
+        - mkdir -p ~/.ssh
+        - eval $(ssh-agent -s)
+        - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
+        - touch ~/.ssh/config
+        - echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
+        - ssh-keyscan -H $EC2_IPADDRESS >> ~/.ssh/known_hosts
+    script:
+        - echo "Deploying started..."
+        - ssh ubuntu@$EC2_IPADDRESS "sudo systemctl stop stockapp.service"
+        - scp ./target/stock-tracking-be-0.0.1-SNAPSHOT.jar ubuntu@$EC2_IPADDRESS:~/stock-app/
+        - ssh ubuntu@$EC2_IPADDRESS "sudo systemctl start stockapp.service"
+        - echo "Finished deploying the app."
+    only:
+        - master
+    
