--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:mysql://stockdb.ckdsnsfalkfr.us-east-1.rds.amazonaws.com:3306/stockdb
-spring.datasource.username=root
-spring.datasource.password=root1234
+spring.datasource.url= jdbc:mysql://remotemysql.com:3306/L53ztQvCWy
+spring.datasource.username=L53ztQvCWy
+spring.datasource.password=Pd433od7Rz
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
