added github workflow

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:mysql://remotemysql.com:3306/L53ztQvCWy
-spring.datasource.username=L53ztQvCWy
-spring.datasource.password=Pd433od7Rz
+spring.datasource.url= jdbc:mysql://awseb-e-g2qmi9nthd-stack-awsebrdsdatabase-ncdnoaqacybw.cgeytx1jz0sh.us-east-1.rds.amazonaws.com:3306/stockdb
+spring.datasource.username=root
+spring.datasource.password=root1234
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
@@ -10,4 +10,4 @@ logging.level.org.springframework.security=TRACE
 jwt-variables.KEY=jwtProject
 jwt-variables.EXPIRES_ACCESS_TOKEN_MINUTE=150
 jwt-variables.EXPIRES_REFRESH_TOKEN_MINUTE=150000
-server.port=8080
+server.port=5000
