--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:mysql://awseb-e-g2qmi9nthd-stack-awsebrdsdatabase-ncdnoaqacybw.cgeytx1jz0sh.us-east-1.rds.amazonaws.com:3306/stockdb
-spring.datasource.username=root
-spring.datasource.password=root1234
+spring.datasource.url= DATABASEURL
+spring.datasource.username=DBUSERNAME
+spring.datasource.password=DBPASSWORD
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
