--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= DATABASEURL
+spring.datasource.url= DBURL
 spring.datasource.username=DBUSERNAME
 spring.datasource.password=DBPASSWORD
 spring.jpa.hibernate.ddl-auto=update
